--- a/deb/openresty-debug/debian/rules
+++ b/deb/openresty-debug/debian/rules
@@ -43,6 +43,7 @@ override_dh_auto_configure:
 	  --with-threads \
 	  --with-poll_module \
 	  --with-luajit-xcflags='-DLUAJIT_NUMMODE=2 -DLUAJIT_ENABLE_LUA52COMPAT -O0' \
+	  --with-compat \
 	  -j$(NJBS)
 
 override_dh_usrlocal:
