--- a/deb/openresty-valgrind/debian/rules
+++ b/deb/openresty-valgrind/debian/rules
@@ -44,6 +44,7 @@ override_dh_auto_configure:
 	  --with-poll_module \
 	  --with-luajit-xcflags='-DLUAJIT_NUMMODE=2 -DLUAJIT_ENABLE_LUA52COMPAT -DLUAJIT_USE_VALGRIND -DLUAJIT_USE_SYSMALLOC -O0' \
 	  --with-no-pool-patch \
+	  --with-compat \
 	  -j$(NJBS)
 
 override_dh_usrlocal:
