--- a/deb/openresty/debian/rules
+++ b/deb/openresty/debian/rules
@@ -40,6 +40,7 @@ override_dh_auto_configure:
 	  --with-http_gunzip_module \
 	  --with-threads \
 	  --with-luajit-xcflags='-DLUAJIT_NUMMODE=2 -DLUAJIT_ENABLE_LUA52COMPAT' \
+	  --with-compat \
 	  -j$(NJBS)
 
 override_dh_usrlocal:
